<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Borkozic Location Share</string>
    <string name="msg_needs_setup">You have to setup your session details</string>
    <string name="msg_needs_enable">Enable sharing to receive information about session users</string>
    <string name="msg_no_users">Looks like nobody shares their location with you</string>
    <string name="notif_sharing">Sharing location in real-time</string>
    <string name="notif_error">Unable to share location</string>
    <string name="notif_newsession">%s has joined session</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_view">View</string>
    <string name="menu_navigate">Navigate</string>
    <string name="menu_help">Help</string>
    <string name="pref_sharing_title">Location sharing</string>
    <string name="pref_sharing_session_title">Session title</string>
    <string name="pref_sharing_session_summary">Unique string identifying a session, it must be the same for all users in a group and must be secret to not let unwanted users join this group</string>
    <string name="pref_sharing_user_title">User identifier</string>
    <string name="pref_sharing_user_summary">Unique string identifying a user within a session group</string>
    <string name="pref_sharing_updateinterval_title">Update interval</string>
    <string name="pref_sharing_updateinterval_summary">Time interval in seconds at which location data is sent and received</string>
    <string name="pref_sharing_timeout_title">Location timeout</string>
    <string name="pref_sharing_timeout_summary">Time after which user will be displayed as lost</string>
    <string name="pref_sharing_notifications_title">New user notification</string>
    <string name="pref_sharing_tagcolor_title">Tag color</string>
    <string name="pref_sharing_tagsize_title">Tag size</string>
    <string name="msgPermissionsRationale">Permissions should be granted to display shared locations on map</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>