<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dip">

        <TextView
            style="@style/SubHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dip"
            android:text="@string/pref_sharing_session_title" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_sharing_session_summary" />

        <TextView
            style="@style/SubHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_sharing_user_title" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_sharing_user_summary" />

        <TextView
            style="@style/SubHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_sharing_updateinterval_title" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_sharing_updateinterval_summary" />

        <TextView
            style="@style/SubHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_sharing_timeout_title" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_sharing_timeout_summary" />
    </LinearLayout>

</ScrollView>